Minor SEO Fixes

--- a/content/posts/enable-background-audio-react-native.mdx
+++ b/content/posts/enable-background-audio-react-native.mdx
@@ -2,7 +2,8 @@
 title: How to enable background Audio Play in iOS React Native
 date: 2021-05-27
 tags: [react-native, mobile]
-description: Enable background play when app is minimized
+category: react-native
+excerpt: Enable background play when a React Native App is minimized
 ---
 
 1. Open `ios/{APP_NAME}/Info.plist`.
