--- a/content/posts/an-introduction-to-erlang.mdx
+++ b/content/posts/an-introduction-to-erlang.mdx
@@ -1,7 +1,8 @@
 ---
 title: An introduction to Erlang
-date: 2019-12-19
-tags: [Erlang]
+date: 2020-06-12
+tags: [Erlang, distributed-programming]
+excerpt: What is Erlang and where it originated from.
 ---
 
 If you have used WhatsApp, Facebook Chat, then you have one way or the other interacted with an Erlang backed system.
