--- a/content/posts/an-introduction-to-erlang.mdx
+++ b/content/posts/an-introduction-to-erlang.mdx
@@ -2,7 +2,7 @@
 title: An introduction to Erlang
 date: 2021-06-12
 tags: [Erlang, distributed-programming]
-excerpt: What is Erlang, and variable basics from.
+excerpt: What is Erlang, how Jor Armstrong came about it, and variable basics.
 ---
 
 If you have used WhatsApp, Facebook Chat, then you have one way or the other interacted with an Erlang backed system.
