Update to erlang creator

--- a/content/posts/an-introduction-to-erlang.mdx
+++ b/content/posts/an-introduction-to-erlang.mdx
@@ -7,7 +7,7 @@ excerpt: What is Erlang, how Jor Armstrong came about it, and variable basics.
 
 If you have used WhatsApp, Facebook Chat, then you have one way or the other interacted with an Erlang backed system.
 
-Erlang is a language created for telecommunication industry by _Erlang Creator_ at _Erlang Creation Space_. It was recorded that [Jor Armstrong](<https://en.wikipedia.org/wiki/Joe_Armstrong_(programmer)>) claimed he was provided a library and did not know what to do with it, then they taught to solve the reliability and concurrent problem of the telecommunication industry, and that gave birth to Erlang.
+Erlang is a language created for telecommunication industry by [Jor Armstrong](<https://en.wikipedia.org/wiki/Joe_Armstrong_(programmer)>), [_Robert Virding_]() and _Mike Williams_ in 1986. It was recorded that [Jor Armstrong](<https://en.wikipedia.org/wiki/Joe_Armstrong_(programmer)>) claimed he was provided a library and did not know what to do with it, then they taught to solve the reliability and concurrent problem of the telecommunication industry, and that gave birth to Erlang.
 
 The strength of Erlang lies in running scalable applications in a Distributed environment. It allows computers to network with each other with a very little overhead on the programmer and the operating system.
 
