--- a/content/posts/an-introduction-to-erlang.mdx
+++ b/content/posts/an-introduction-to-erlang.mdx
@@ -9,13 +9,11 @@ If you have used WhatsApp, Facebook Chat, then you have one way or the other int
 
 Erlang is a language created for telecommunication industry by [Jor Armstrong](<https://en.wikipedia.org/wiki/Joe_Armstrong_(programmer)>), [_Robert Virding_]() and _Mike Williams_ in 1986. It was recorded that [Jor Armstrong](<https://en.wikipedia.org/wiki/Joe_Armstrong_(programmer)>) claimed he was provided a library and did not know what to do with it, then they taught to solve the reliability and concurrent problem of the telecommunication industry, and that gave birth to Erlang.
 
-The strength of Erlang lies in running scalable applications in a Distributed environment. It allows computers to network with each other with a very little overhead on the programmer and the operating system.
-
-We are not here to battle why Erlang is the great concurrent programming language, we are here to envagalize about its syntax and way of thinking.
+The strength of Erlang lies in running scalable applications in a [Distributed environment](https://en.wikipedia.org/wiki/Distributed_computing). It allows computers to network with each other with a very little overhead on the programmer and the operating system.
 
 In this post, we would be getting a formal introduction to Erlang and we are just covering the basics. We would be covering variables, funcs (functions), modules, types, records, maps, processes, and distributed system.
 
-What we won't cover is the whole of the OTP framework. In the future, we would be having a post about this!
+The whole of the [OTP framework](/blog/erlang-otp) won't be covered. In the future, we would be having a post about this!
 
 ## Installation and Initialization
 
