--- a/content/posts/erlang-variables.mdx
+++ b/content/posts/erlang-variables.mdx
@@ -1,6 +1,6 @@
 ---
 title: Erlang Variables
-date: 2019-12-29
+date: 2021-06-14
 tags: [Erlang]
 ---
 
@@ -34,3 +34,7 @@ There is no thing as global or private scope in Erlang, all variables are lexica
 ---
 
 Continue to the next of Erlang Learning: [Erlang Pattern Matching](/blog/erlang-pattern-matching)
+
+Namaste!
+
+Ciao!
