--- a/content/posts/erlang-variables.mdx
+++ b/content/posts/erlang-variables.mdx
@@ -1,10 +1,15 @@
 ---
 title: Erlang Variables
 date: 2021-06-14
-tags: [Erlang]
+tags: [Erlang, erlang-variables]
+excerpt: Learn the rules to delcare and use variables in Erlang
 ---
 
-If you have worked with other languages like JavaScript, Java, Python etc, you would be surprised by what Erlang understands as variable. In Erlang, variables starts with uppercase letter, thus, `C`, `X`, `Ape`, `Ant` are all valid identifiers for Erlang variables. Variables can not start with lowercase letter and begin with a number, Erlang variables can include can alphanumeric characters, an underscore and @ symbol.
+If you have worked with other languages like JavaScript, Java, Python etc, you would be surprised by what Erlang understands as variable.
+
+In Erlang, variables starts with uppercase letter, thus, `C`, `X`, `Ape`, `Ant` are all valid identifiers for Erlang variables.
+
+Variables can not start with lowercase letter and begin with a number, Erlang variables can include can alphanumeric characters, an underscore and @ symbol.
 
 ```erl
 X = 1. %% Valid
@@ -12,9 +17,13 @@ y = 2. %% Invalid
 1X = 2. %% Invalid
 ```
 
-When _assigning_ to a variable - as we do call it in other languages, Erlang actually does something called pattern matching. Comparing the values on the right to the values on the left. A pattern match would only succeed if they two operands match, thus, in Erlang, a variable get assigned to if it is either `unbound` or has the same value as the value at the right.
+When _assigning_ to a variable - as we do call it in other languages, Erlang actually does something called pattern matching. Comparing the values on the right to the values on the left.
 
-The `=` is a special symbol that does not do assignment but makes the pattern matching operation to be successful if its conditions are met. Hence, in Erlang `=` is known as a pattern match operator which evaluates the value of the right hand side (RHS) then matching the result with the left hand side (LHS)
+A pattern match would only succeed if they two operands match, thus, in Erlang, a variable get assigned to if it is either `unbound` or has the same value as the value at the right.
+
+The `=` is a special symbol that does not do assignment but makes the pattern matching operation to be successful if its conditions are met.
+
+Hence, in Erlang `=` is known as a pattern match operator which evaluates the value of the right hand side (RHS) then matching the result with the left hand side (LHS)
 
 ```erlang
 X = 1. %% successful
