Erlang pattern matching

--- a/content/posts/erlang-variables.mdx
+++ b/content/posts/erlang-variables.mdx
@@ -11,7 +11,7 @@ In Erlang, variables starts with uppercase letter, thus, `C`, `X`, `Ape`, `Ant` 
 
 Variables can not start with lowercase letter and begin with a number, Erlang variables can include can alphanumeric characters, an underscore and @ symbol.
 
-```erl
+```erlang
 X = 1. %% Valid
 y = 2. %% Invalid
 1X = 2. %% Invalid
@@ -43,7 +43,5 @@ There is no thing as global or private scope in Erlang, all variables are lexica
 ---
 
 Continue to the next of Erlang Learning: [Erlang Pattern Matching](/blog/erlang-pattern-matching)
-
-Namaste!
 
 Ciao!
