--- a/content/draft/post.mdx
+++ b/content/draft/post.mdx
@@ -1,7 +1,14 @@
 ---
 title: Title of the post
-date: 2019-05-15
+date: 2021-05-15
 tags: []
+excerpt
+socialImage:
+imageCaptionLink:
+imageCaptionText:
+imageAlt:
+image:
+slug:
 ---
 
 Write Here
