--- a/notes/example-note.mdx
+++ b/notes/example-note.mdx
@@ -3,7 +3,7 @@ title: Example note
 tags:
   - example
 emoji: 👋
-link: https://zander.wtf
+link: https://aleemisiaka.com
 modified: 2021-04-23
 ---
 
