--- a/content/posts/migrating-from-wordpress-to-gatsby.mdx
+++ b/content/posts/migrating-from-wordpress-to-gatsby.mdx
@@ -119,8 +119,8 @@ Considering the various users that would stumble on the site, I ensure that whil
 
 Not until I found the fluidness, I tweaked until I got something like this:
 
-![aleemisiaka.com](../assets/aleemisiaka-website-foot.jpg)
-![aleemisiaka.com](../assets/aleemisiaka-website-head.jpg)
+![aleemisiaka.dev](../assets/aleemisiaka-website-foot.jpg)
+![aleemisiaka.dev](../assets/aleemisiaka-website-head.jpg)
 
 ### Pulling posts from the old WordPress setup
 
